tests/rascal/negative/type_errors/L1/19_expression_ES10_D4_88.ob
MODULE Test19;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               p := (y < 0);
               x := (((- (1223 DIV 200)) * (- 1)) MOD (((200 MOD x) DIV (z * 200)) + z));
               p := ((- ((1 + z) * 1)) > x);
               x := (((1 DIV 200) MOD (y DIV x)) + (((200 + 2) MOD x) * 1223));
               r := p;
               r := ((x * ((x DIV 200) DIV (1223 * 1))) > y);
               r := ((y MOD (0 - z)) < (- (z - (z DIV y))));
               r := (1 <= (0 + y));
  (* error *)  x := z;
               x := 0
END Test19.